# FEniCSx_GMSH_tutorials

./: .buildinfo  .gitignore  Create_github_io_build.html  Create_github_io_build.md  Dockerfile  INSTALL.md  README.html  README.md  README_new.md  Ressources_links.html  _config.yml  _toc.yml  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
Elastic_Multi_material_Beam/: Elastic_multimaterial_beam.html  Elastic_multimaterial_beam.md  Elastic_multimaterial_beam.py  README.html  README.md
Elastic_Multi_matertial_Beam/: Elastic_multimaterial_beam.py
Elastic_Updated_Lagrange_Beam/: Elastic_updated_Lagrange_beam.py  README.md
Hyper-Elastic_and_Elastic_Beam/: 3D_Elastic_mesh.py  Elastic_and_Hyper_elastic_beam.py  README.md
Hyper-Elstic_and_Elastic_Beam/: Elastic_and_Hyper_elastic_beam.py
Hyper-elastic_beam/: Hyper_elastic.py  README.md
In progress/: 3D_Elastic_mesh.py  Elastic.py  Elastic_2.py  Hyper_elastic_contact_conditionnel.py  Hyper_elastic_contact_conditionnel_body_force.py  Hyper_elastic_contact_tout_le_temps.py  Hyper_elastic_tuto_v_8_0.py  Terzaghi.py  subdomain_v_8_0.py
Install/: Dockerfile  Install_processes.html  Installation_Methods.html  docker_and_aliases.html  docker_and_aliases.md
Local_Refinement/: Local_Refine_FEniCSx.py  Local_Refine_GMSH.py  README.md
Other_GMSH_Examples/: MESH_Multi_material_Chip.py  Mesh_Multi_material_Chip.py  Multi_material_Chip.py  Pseudo_breast.py  README.md  from_stl_no_tags.py  gmsh_from_geo_local_refine.py
WSL_Docker_installer/src_install/custom_packages/: pyproject.toml
(+280 files in other folders)
